Add html innertext to display data

--- a/index.html
+++ b/index.html
@@ -27,10 +27,54 @@
             <div class="my-3">Weater condition</div>
             <div class="display-4 my-4">
                 <span>temp</span>
-                <span>&deg;C</span>
+                <span>&deg;F</span>
             </div>
         </div>
     </div>
+
+    <div class="container my-5 mx-auto">
+        <h1 class="text-muted text-center my-4">5 Day Forecast</h1>
+
+        <div class="text-muted text-uppercase text-center details-forecast">
+            <h5 class="my-3">Date</h5>
+            <div class="my-3">Morning</div>
+            <div class="display-4 my-4">
+                <span>temp</span>
+                <span>&deg;F</span>
+            </div>
+
+            <h5 class="my-3">Date</h5>
+            <div class="my-3">Morning</div>
+            <div class="display-4 my-4">
+                <span>temp</span>
+                <span>&deg;F</span>
+            </div>
+
+            <h5 class="my-3">Date</h5>
+            <div class="my-3">Morning</div>
+            <div class="display-4 my-4">
+                <span>temp</span>
+                <span>&deg;F</span>
+            </div>
+
+            <h5 class="my-3">Date</h5>
+            <div class="my-3">Morning</div>
+            <div class="display-4 my-4">
+                <span>temp</span>
+                <span>&deg;F</span>
+            </div>
+
+            <h5 class="my-3">Date</h5>
+            <div class="my-3">Morning</div>
+            <div class="display-4 my-4">
+                <span>temp</span>
+                <span>&deg;F</span>
+            </div>
+            
+        </div>
+    </div>
+
+
 
     <script src="scripts/app.js"></script>
     <script src="scripts/forecast.js"></script>
