Add inner text to append city weather information

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="details">
             <div class="cityinfo">
                 <h3>City</h3>
+                <h3>Weather</h3>
                 <h3>As of 8:58 pm EST</h3>
             </div>
             <div class="temp">
