Add uv index and feels like temp

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <div class="temp">
                 <span>temp</span>
                 <span>&deg;F</span>
+                <h4>Feels like</h4>
+                <h4>UV Index</h4>
             </div>
         </div>
 
