Change background color

--- a/index.html
+++ b/index.html
@@ -12,26 +12,26 @@
 <body>
 
     <div class="container-daily">
-
+        <h1>Weather App</h1>
         <form class="change city">
            <label for="city"></label>
            <input type="city" name="city" placeholder="Enter city">
            <input type="submit" value="submit">
         </form>
         
-        <div class="card">
+        <div class="card d-none">
             <img src="https://via.placeholder.com/200x100">
         </div>
 
-        <div class="details">
+        <div class="details d-none">
             <div class="cityinfo">
                 <h1>City</h1>
-                <h3>Weather</h3>
                 <h5>As of 8:58 pm EST</h5>
             </div>
             <div class="temp">
                 <span>temp</span>
                 <span>&deg;F</span>
+                <h3>Weather</h3>
                 <h4>Feels like</h4>
                 <h4>UV Index</h4>
             </div>
