Add rsponsive design

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="table-header d-none">
                     <h2>5 Day Forecast</h2>
                 </div>
-                <table class="d-none">
+                <table class="d-none overflow-x:auto">
                     <!-- <h1>5 Day Forecast</h1> -->
                     <tr>
                     <th>Day</th>
