--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <input type="city" name="city" placeholder="Enter city">
             <input type="submit" value="submit">
             </form>
+            <h5 class="current-time d-none">As of 8:58 pm EST</h5>
         </div>
     
         <div class="alert"></div>
@@ -37,7 +38,6 @@
                     <div class="details">
                         <div class="cityinfo">
                             <h1>City</h1>
-                            <h5>As of 8:58 pm EST</h5>
                         </div>
                         <div class="temp">
                             <span>temp</span>
